--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit>=1.28.0
 langchain>=0.1.0
 langchain-ollama>=0.1.0
 langchain-community>=0.0.20
-streamlit-authenticator==0.2.3
 docx2txt
 pypdf
+fastapi
+uvicorn
+python-multipart
+beautifulsoup4
