--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 langchain>=0.1.0
 langchain-ollama>=0.1.0
+langchain-openai>=0.1.0
 langchain-community>=0.0.20
 docx2txt
 pypdf
@@ -7,3 +8,4 @@ fastapi
 uvicorn
 python-multipart
 beautifulsoup4
+openai>=1.40.0
