--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+frontend/.next
+frontend/.idea
+frontend/node_modules
+frontend/.env.local
+
+venv
